// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewContainer render content render once; should call details view opened 1`] = `
<DetailsViewContentWithLocalState
  deps={
    {
      "detailsViewActionMessageCreator": [typemoq mock object],
      "storesHub": [typemoq mock object],
    }
  }
  storeState={
    {
      "tabStoreData": {
        "isClosed": false,
        "isOriginChanged": false,
      },
      "visualizationStoreData": {
        "selectedDetailsViewPivot": -1,
      },
    }
  }
/>
`;

exports[`DetailsViewContainer render content show InjectionFailed when injection failed 1`] = `
<React.Fragment>
  <NarrowModeDetector
    Component={[Function]}
    childrenProps={
      {
        "deps": {
          "storesHub": [typemoq mock object],
        },
      }
    }
    deps={
      {
        "storesHub": [typemoq mock object],
      }
    }
    isNarrowModeEnabled={true}
  />
  <InjectionFailed />
</React.Fragment>
`;

exports[`DetailsViewContainer render content show NoContentAvailable when stores are not loaded 1`] = `
<React.Fragment>
  <NarrowModeDetector
    Component={[Function]}
    childrenProps={
      {
        "deps": {
          "storesHub": [typemoq mock object],
        },
      }
    }
    deps={
      {
        "storesHub": [typemoq mock object],
      }
    }
    isNarrowModeEnabled={false}
  />
  <NoContentAvailable />
</React.Fragment>
`;

exports[`DetailsViewContainer render content show NoContentAvailable when target tab is closed 1`] = `
<React.Fragment>
  <NarrowModeDetector
    Component={[Function]}
    childrenProps={
      {
        "deps": {
          "storesHub": [typemoq mock object],
        },
      }
    }
    deps={
      {
        "storesHub": [typemoq mock object],
      }
    }
    isNarrowModeEnabled={true}
  />
  <NoContentAvailable />
</React.Fragment>
`;

exports[`DetailsViewContainer render content shows NoContentAvailable when target page is changed and no permissions granted 1`] = `
<React.Fragment>
  <NarrowModeDetector
    Component={[Function]}
    childrenProps={
      {
        "deps": {
          "storesHub": [typemoq mock object],
        },
      }
    }
    deps={
      {
        "storesHub": [typemoq mock object],
      }
    }
    isNarrowModeEnabled={true}
  />
  <NoContentAvailable />
</React.Fragment>
`;

exports[`DetailsViewContainer render renders spinner when stores not ready 1`] = `
<StyledSpinnerBase
  className="details-view-spinner"
  label="Loading..."
  size={3}
/>
`;
